@@ -72,6 +72,7 @@ Frank Harnack
 Frederic Lavigne
 Gary S. Weaver
 Gautam Guliani
+Georges-Etienne Legendre
 Gero Vermaas
 Gerrit Riessen
 Glenn McAllister
